001 Rubik's Cube - enlarge font size
specify input class in css

--- a/p/001_Rubik's_Cube/styles/main.css
+++ b/p/001_Rubik's_Cube/styles/main.css
@@ -1,9 +1,13 @@
 body {
     font-family:'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
-    font-size: 10px;
+    font-size: 20px;
 }
 div.roofpig {
     width:300px;
     height:400px;
     margin: auto;
+}
+input.pos {
+	width:25px;
+	font-size: 20px;
 }
