--- a/p/006_Lights_Out/styles/main.css
+++ b/p/006_Lights_Out/styles/main.css
@@ -6,12 +6,16 @@ body {
 	margin-top:70px;
 	margin-left:100px;
 }
-input {
+input.size{
 	width:50px;
 	height:20px;
 	font-size: 20px;
 	background-color: #292421;
 	color: #FAEBD7;
+}
+input[type= "checkbox"]{
+	width:30px;
+	height:30px;
 }
 .board{
 	background-color:#595959;
@@ -19,4 +23,7 @@ input {
 th{
 	text-align: center;
 	color: #DDA0DD;
+}
+.controls{
+	padding:15px;
 }
